Updated stylesheets to work on IE, Firefox and mopbile browsers correctly. Added selection functionality for photos.

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -36,12 +36,9 @@ html.PhotoList { background-color: #FFF; }
 /*html.PhotoList > body { overflow-y: scroll; }*/
 
 div.Menu { position:fixed;top:20px;left:20px;width:200px;border:1px solid #B7B7B7; }
-div.Menu > input[type="checkbox"] { z-index:300;display:none;position:absolute;top:-20px;left:0;width:0;height:0; }
-div.Menu > input[type="checkbox"]:before { content:"";width:40px;height:40px;background:#FFAF02;position:absolute;top:20px;left:0;background:#FFAF02 url(../img/menu.svg) no-repeat;transition:left 0.5s; }
-div.Menu > input[type="checkbox"]:checked::before { left:160px; }
-div.Menu > input[type="checkbox"] + div::after { transition:left 0.5s, background-color 0.5s;content:"";display:block;z-index:100;position:fixed;top:0;left:0;right:100%;bottom:0;background-color:rgba(0,0,0,0); }
+div.Menu > button { display:none; }
 div.Menu a { display:block; margin:10px 20px; }
-div.PhotoMenu { border-top:1px solid #DFDFDF;}
+div.Menu > div > div.PhotoMenu { border-top:1px solid #DFDFDF;}
 
 div.Content { margin: 65px 20px 20px 240px; }
 div.PhotoList > div { clear:both;padding-top:10px;position:relative; }
@@ -52,10 +49,14 @@ div.PhotoList > div > label { cursor:pointer;display:block;width:100%;padding:5p
 div.PhotoList > div > label::before { content: "";background:url(../img/arrow-right.svg) no-repeat;display: block;width: 20px;height: 20px;position: absolute;left: 10px;top: 19px; }
 div.PhotoList > div > input:checked + label::before { background-image: url(../img/arrow-down.svg); }
 div.PhotoList > div > label > span { float: right;font-size: 0.7em;color: #FFEDCC;line-height: 16px; }
-div.PhotoList > div > div > div { float:left; }
+div.PhotoList > div > div > div { float:left;position:relative; }
 div.PhotoList > div > div > div > img { display: block;width:320px;height:320px;box-shadow:0px 5px 10px 0px rgba(0,0,0,0.5);margin:10px; }
+div.PhotoList > div > div > div > input { position:absolute;left:10px;bottom:10px;width:16px;height:16px; }
+div.PhotoList > div > div > div > input::after { width:100%;height:100%;content:"";background:#f00;display:block; }
+div.PhotoList > div > div > div > input:checked::after { background:#0f0; }
+div.PhotoList.Selectable > div > div > div:after { pointer-events:none;content: "";display: block;border:1px solid #FFAF02;cursor:pointer;right: 0;bottom: 0;position: absolute;top: 0;left: 0;margin: 10px;}
+div.PhotoList.Selectable > div > div > div.Selected:after { background: rgba(255,175,2,0.3) url(../img/menu.svg) no-repeat left bottom; }
 div.PhotoList::after { content:"";display:block;clear:both;height:0; }
-
 div.PhotoUpload { padding-top:20px; }
 div.UploadProgress { border: 1px solid #B7B7B7;border-radius:5px;height:20px;margin:20px 0; }
 div.UploadProgress > div { height:18px;width:0%;background:#FFAF02;border-radius: 4px; }
@@ -89,21 +90,26 @@ p.error { color:#800; background-color:#fcc;border-color:#800; }
 p.success { color:#080; background-color:#cfc;border-color:#080; }
 p.info { color:#008; background-color:#ccf;border-color:#008; }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+{
 	div.Menu { border:none;background:none;top:0;left:0;z-index:200; }
-	div.Menu > input[type="checkbox"] { display:block; }
-	div.Menu > input[type="checkbox"]:checked + div { left:0; }
+	div.Menu > button { display:block;z-index:301;border:none;width:40px;height:40px;position:absolute;top:0;right:160px;background:url(../img/menu.svg) no-repeat;transition:right 0.5s; }
 	div.Menu > div { display:block;position:fixed;z-index:200;width:200px;height:inherit;bottom:0;top:0;left:-200px;background:#fff;border-right:1px solid #B7B7B7;transition:left 0.5s; }
-	div.Menu > input[type="checkbox"]:checked + div::after { left:200px;right:0;background-color:rgba(0,0,0,0.5); }
+	div.Menu::after { content:"";display:block;z-index:100;position:fixed;top:0;left:0;right:100%;bottom:0;background-color:rgba(0,0,0,0); }
+	div.Menu.Checked > button { right:0; }
+	div.Menu.Checked > div { left:0; }
+	div.Menu.Checked::after { right:0;background-color:rgba(0,0,0,0.5); }
+	div.Menu > div > div.MainMenu { border-top:1px solid #DFDFDF;margin-top:40px; }
 	div.Content { margin: 65px 0 0 0; }
 	div.Tools { left:0;right:0;height:42px;padding-top:0; }
-	div.Tools > input[type="range"] { display:none; }
+	div.Tools > div.ToolsZoom { display:none; }
 	div.PhotoList > div { padding-top:5px; }
 	div.PhotoList > div > label { margin:0 0 5px 0; }
 	div.PhotoList > div > label::before { top: 14px; }
 	div.PhotoList > div > label > span { line-height: 18px; }
 	div.PhotoList > div > div > div { float:left;width:25%; }
 	div.PhotoList > div > div > div > img { display: block;width:100%;height:100%;box-shadow:none;margin:0; }
+	div.PhotoList.Selectable > div > div > div:after { margin: 0;}
 	div.PhotoMenu a { margin: 20px; }
 	div.PhotoUpload { padding:20px 10px; }
 	
